log
Thu 20 Apr 2023 03:55:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
5ced81f
Thu 20 Apr 2023 03:55:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a691dda
Thu 20 Apr 2023 04:01:55 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:73:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |   Pair* aux = tree->root->pair;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
a424113
Thu 20 Apr 2023 04:07:51 PM UTC: 
 treemap.c | 22 ++++++++++++++--------
 1 file changed, 14 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
4a80571
Thu 20 Apr 2023 04:14:09 PM UTC: 
 treemap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  12|6
total_score: 15/70
94ab5ad
Thu 20 Apr 2023 04:14:42 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
bb00818
Thu 20 Apr 2023 04:18:06 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
269bf06
Thu 20 Apr 2023 04:33:16 PM UTC: 
 treemap.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
77d103e
Thu 20 Apr 2023 04:46:22 PM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  18|3
total_score: 40/70
3b3a2cf
Thu 20 Apr 2023 04:48:33 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  18|3
total_score: 40/70
d7771be
Thu 20 Apr 2023 04:56:55 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  20|2
total_score: 45/70
39de99d
Thu 20 Apr 2023 04:57:54 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  20|2
total_score: 45/70
8971090
Thu 20 Apr 2023 05:02:48 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  20|2
total_score: 45/70
ba4bff4
Thu 20 Apr 2023 05:03:43 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  21|2
total_score: 50/70
3019059
Thu 20 Apr 2023 05:05:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
93dd7df
Thu 20 Apr 2023 05:06:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
1529bbd
Thu 20 Apr 2023 05:09:00 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  27|1
total_score: 60/70
e81a247
Thu 20 Apr 2023 05:15:09 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++------
 1 file changed, 23 insertions(+), 6 deletions(-)
 tests:  29|0
total_score: 70/70
cb8d2bd
